--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -64,7 +64,7 @@
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
 						<h1>Qui suis-je <span>&amp; </span>Ce que je fais </h1>
-						<h2>Mon<a href="https://sana-hm.github.io" target="_blank"> CV en ligne</a></h2>
+						<h2>Mon<a href="../" target="_blank"> CV en ligne</a></h2>
 					</div>
 				</div>
 			</div>
