--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -61,7 +61,7 @@
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
 						<h1>Je m'appelle Sana<br>Je suis <span>UX/UI </span>Designer</h1>
-						<h2>Mon github <a href="https://github.com/Sana-hm" target="_blank">Sana-hm</a></h2>
+						<h2>Mon <a href="../" target="_blank">CV en ligne</a></h2>
 					</div>
 				</div>
 			</div>
