--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <div class="personal-info padd-15">
                     <div class="row">
                       <div class="info-item padd-15">
-                        <p>Naissance : <span> 26 auot 1998</span></p>
+                        <p>Naissance : <span> 26 août 1998</span></p>
                       </div>
 
                       <div class="info-item padd-15">
