--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -95,6 +95,29 @@
 
 			</div>
 		</div>
+
+
+		<!--<div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="" data-next="yes">
+			<div class="container">
+				<div class="fh5co-project-inner row">
+					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
+						<div class="img-holder-1 animate-box">
+							<img src="images/beorn-homme.png" alt="Beorn">
+						</div>
+						<div class="img-holder-2 animate-box">
+							<img src="images/Capture d’écran 2023-03-08 115648.png" alt="Beorn Technologies">
+						</div>
+					</div>
+					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
+						<h2>Beorn Technologies</h2>
+						<p>Beorn aide à la transformation numérique les entreprises. Elle donne des conseiles aux entreprises à la recherche de solutions digitales sur mesure. </p>
+						<p><a href="beorn.html" class="btn btn-light btn-outline transition">Voir le projet</a></p>
+					</div>
+				</div>
+
+			</div>
+		</div>-->
+
 		
 
 
@@ -274,7 +297,7 @@
 				</div>
 			</div>
 		</div>
-		
+
         <footer id="fh5co-footer" class="js-fh5co-waypoint">
 			<div class="container">
 				<div class="row">
