update image name

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <div class="portfolio-item padd-15" data-category="Architecture">
                               <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                  <img src="img/UX-UI.png" alt="UX/UI">
+                                  <img src="img/ux-ui.png" alt="UX/UI">
                                 </div>
                                 <div class="portfolio-info">
                                   <h4>Réaliser la maquette - UX/UI</h4>
