--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Janvier 2023
-                        <h4 class="timeline-title">Chef De Projet Multimédia en alternance</h4>
+                        <h4 class="timeline-title">UX/UI Designer</h4>
                         <p class="timeline-text">- Création et déclinaison de maquettes graphiques de sites internet (Figma)<br>
                           - Refonte d'identités visuelles (logos, chartes graphiques)<br>
                           - Création de sites internet avec Wordpress</p><br>
@@ -583,7 +583,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Juillet -  Décembre 2022 
-                        <h4 class="timeline-title">UX/UI Designer en alternance</h4>
+                        <h4 class="timeline-title">UX/UI Designer</h4>
                         <p class="timeline-text">- Création et déclinaison de maquettes graphiques de sites internet<br>
                           - Proposition de concepts créatifs & graphiques pour des appels d'offres<br>
                           - Refonte d'identités visuelles (logos, chartes graphiques)<br>
@@ -598,7 +598,7 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Mai - Juillet 2022
-                        <h4 class="timeline-title">Web designer intégrateur</h4>
+                        <h4 class="timeline-title">UX/UI Designer</h4>
                         <p class="timeline-text">- Création et déclinaison de maquettes graphiques de sites internet<br>
                           - Proposition de concepts créatifs & graphiques pour des appels d'offres<br>
                           - Refonte d'identités visuelles (logos, chartes graphiques)<br>
@@ -613,10 +613,10 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Janvier - Mars 2022
-                        <h4 class="timeline-title">Développeur Full-Stack freelance</h4>
+                        <h4 class="timeline-title">UX/UI Designer freelance</h4>
                         <p class="timeline-text">
                           - Création de sites internet avec
-                          WordPress ( https://krossinmuutto.fi/ ), ( https://https://extramuutto.fi// )<br>
+                          WordPress<br>
                         - Développement de la partie front-end et de la partie back-end <br>
                       - Création et déclinaison de maquettes graphiques de sites internet</p><br>
                           
