--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       </div>
 
                       <div class="info-item padd-15">
-                        <p>E-mail : <span> sana.sh19@yahoo.com </span></p>
+                        <p>E-mail : <span> sana.homaei1@gmail.com </span></p>
                       </div>
 
                       <div class="info-item padd-15">
