--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -97,15 +97,15 @@
 		</div>
 
 
-		<!--<div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="" data-next="yes">
+<!-- <div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="" data-next="yes">
 			<div class="container">
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/beorn-homme.png" alt="Beorn">
+							<img src="images/home_beorn.svg" alt="Beorn">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/Capture d’écran 2023-03-08 115648.png" alt="Beorn Technologies">
+							<img src="images/Mobilbeorn (1).png" alt="Beorn Technologies" style="max-width: 100%;">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
@@ -116,7 +116,7 @@
 				</div>
 
 			</div>
-		</div>-->
+		</div> -->
 
 		
 
