--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 class="shadow-dark"
               />
               <h1>Sana HOMAEI</h1>
-              <p> UX/UI Designer </p>
+              <p> UX/UI Designer | Chef de projet multimédia </p>
               <div class="social-links">
                 <!-- <a href="https://www.facebook.com/sana.hm.3150" target="_blank"  title="facebook"><i class="fa fa-facebook"></i></a> -->
                 <a href="https://github.com/Sana-hm"  target="_blank" title="github"><i class="fa fa-github"></i></a>
