--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                   <div class="portfolio-item padd-15" data-category="Adobe">
                                     <div class="portfolio-item-inner shadow-dark">
                                       <div class="portfolio-img">
-                                        <img src="img/adobe-photoshop-cc-circle.png" alt="Adobe Photoshop">
+                                        <img src="img/photoshop_PNG30.png" alt="Adobe Photoshop">
                                       </div>
                                       <div class="portfolio-info">
                                         <h4>Adobe Photoshop</h4>
@@ -643,7 +643,7 @@
                   </div>
                 </section>
         </div>
-       
+
         <!--about section end-->
           </div>
 
