--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -102,7 +102,7 @@
 							</div>
 							<div class="col-md-9">
 								
-								<p class="fh5co-lead">Je suis UX/UI Design.</p>
+								<p class="fh5co-lead">Je suis UX/UI Designer | Chef de projet multimédia.</p>
 								<p>J'ai fait un stage pratique de 3 mois à la fin de ma formation en bac+3 chez Adico à Bauvais 
 									et j'ai eu le rôle de développeuse Full-Stack et j'ai travaillé sur le projet DSN. Après avoir fini ma formation, 
 									j'ai travaillé en freelance pendant quelque mois et j'ai créé deux sites internets pour mes clients et 
