--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -388,7 +388,7 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/Lessivit/Frame (1).png" alt="Lessivit" />
+                <img src="images/Lessivit/Frame (1).png" alt="Lessivit" style="max-width: 80%;" />
               </div>
               <!-- <div class="img-holder-2 animate-box">
 							<img src="#" alt="Extramuutto">
@@ -422,7 +422,8 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/Where to Work YnovFrame.png" alt="Where to work" />
+                <img src="images/Where to Work YnovFrame.png" alt="Where to work" style="max-width: 80%;" 
+				/>
               </div>
             </div>
             <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
