--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -443,6 +443,40 @@
       </div>
       <!-- Where to work -->
 
+	    <!-- Micro.hs -->
+		<div
+        class="fh5co-project js-fh5co-waypoint"
+        data-colorbg=""
+        data-next="yes"
+      >
+        <div class="container">
+          <div class="fh5co-project-inner row">
+            <div class="fh5co-imgs col-md-8 animate-box">
+              <div class="img-holder-1 animate-box">
+                <img src="images/MicrohsAccueil.png" alt="Micro-hs"  />
+              </div>
+              <!-- <div class="img-holder-2 animate-box">
+							<img src="#" alt="Extramuutto">
+			</div> -->
+            </div>
+            <div class="fh5co-text col-md-4 animate-box">
+              <h2>Le site de Micro.hs</h2>
+              <p>
+                Micro-hs.fr est un site web qui propose des services et des produits spécifiques liés à l'informatique,
+              </p>
+              <p>
+                <a
+                  href="microhs.html"
+                  class="btn btn-light btn-outline transition"
+                  >Voir le projet</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Lessivit -->
+
       <footer id="fh5co-footer" class="js-fh5co-waypoint">
         <div class="container">
           <div class="row">
