--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -388,7 +388,11 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/Lessivit/Frame (1).png" alt="Lessivit" style="max-width: 70%;" />
+                <img
+                  src="images/Lessivit/Frame (1).png"
+                  alt="Lessivit"
+                  style="max-width: 70%"
+                />
               </div>
               <!-- <div class="img-holder-2 animate-box">
 							<img src="#" alt="Extramuutto">
@@ -422,8 +426,11 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/Where to Work YnovFrame.png" alt="Where to work" style="max-width: 75%;" 
-				/>
+                <img
+                  src="images/Where to Work YnovFrame.png"
+                  alt="Where to work"
+                  style="max-width: 75%"
+                />
               </div>
             </div>
             <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
@@ -443,8 +450,8 @@
       </div>
       <!-- Where to work -->
 
-	    <!-- Micro.hs -->
-		<div
+      <!-- Micro.hs -->
+      <div
         class="fh5co-project js-fh5co-waypoint"
         data-colorbg=""
         data-next="yes"
@@ -453,7 +460,7 @@
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 animate-box">
               <div class="img-holder-1 animate-box">
-                <img src="images/MicrohsAccueil.png" alt="Micro-hs"  />
+                <img src="images/MicrohsAccueil.png" alt="Micro-hs" />
               </div>
               <!-- <div class="img-holder-2 animate-box">
 							<img src="#" alt="Extramuutto">
@@ -462,7 +469,8 @@
             <div class="fh5co-text col-md-4 animate-box">
               <h2>Le site de Micro.hs</h2>
               <p>
-                Micro-hs.fr est un site web qui propose des services et des produits spécifiques liés à l'informatique,
+                Micro-hs.fr est un site web qui propose des services et des
+                produits spécifiques liés à l'informatique,
               </p>
               <p>
                 <a
@@ -476,6 +484,35 @@
         </div>
       </div>
       <!-- Lessivit -->
+
+      <!-- OceanEdiFy -->
+      <div
+        class="fh5co-project js-fh5co-waypoint fh5co-reverse"
+        data-colorbg=""
+      >
+        <div class="container">
+          <div class="fh5co-project-inner row">
+            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
+              <div class="img-holder-1 animate-box">
+                <img src="images/OceanEdiFy/Desktop.png" alt="OceanEdiFy" />
+              </div>
+              
+            </div>
+            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
+              <h2>OceanEdiFy</h2>
+              <p>OceanEdify est une plateforme éducative en ligne.</p>
+              <p>
+                <a
+                  href="OceanEdiFy.html"
+                  class="btn btn-light btn-outline transition"
+                  >Voir le projet</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- OceanEdiFy -->
 
       <footer id="fh5co-footer" class="js-fh5co-waypoint">
         <div class="container">
