--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -143,7 +143,7 @@
 			</div>
 		</div> -->
 
-      <div
+      <!-- <div
         class="fh5co-project js-fh5co-waypoint"
         data-colorbg=""
         data-next="yes"
@@ -175,7 +175,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div
         class="fh5co-project js-fh5co-waypoint fh5co-reverse"
@@ -348,7 +348,7 @@
 		</div> -->
 
       <!-- boutique de vêtements -->
-      <div
+      <!-- <div
         class="fh5co-project js-fh5co-waypoint fh5co-reverse"
         data-colorbg=""
       >
@@ -375,7 +375,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- boutique de vêtements -->
 
       <!-- Lessivit -->
@@ -496,7 +496,6 @@
               <div class="img-holder-1 animate-box">
                 <img src="images/OceanEdiFy/Desktop.png" alt="OceanEdiFy" />
               </div>
-              
             </div>
             <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
               <h2>OceanEdiFy</h2>
