--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -55,9 +55,6 @@
 				<li class="animate-box"><a href="index.html" class="transition">Accueil</a></li>
 				<li class="animate-box fh5co-active"><a href="about.html" class="transition">Bio</a></li>
 			</ul>
-			<!-- <a class="style-toggle js-style-toggle" data-style="default" href="#">
-				<span class="fh5co-circle"></span>
-			</a> -->
 		</nav>
 		<header id="fh5co-header" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
 			<div class="container">
@@ -90,28 +87,46 @@
 
 							<!-- Bio  -->
 							<div class="col-md-9">
-								<p class="fh5co-lead">Je suis étudiante à Ynov Campus Toulouse en première anée de master chef de projet de multimédia, spécialisation UX/UI Design.</p>
-								<p>Je suis dévouée à mon travail et prete à m'épanouir dans la conception UX/UI design et le graphisme. j'aime travailler en équipe et faire preuve de créativité, découvrir et explorer de nouvelles idées.</p>
+								<p class="fh5co-lead">Bonjour et bienvenue, <br>
+
+									Je m'appelle Sana, je suis designer UX/UI et chef de projet multimédia avec 3 ans d'expérience. Basée à Toulouse, je possède un master en direction artistique spécialisé en UX/UI design. Je suis disponible pour des postes en CDI ainsi que pour des missions freelance.</p>
+								<p>  Voici les types de projets sur lesquels je peux vous accompagner :<br><br>
+
+									👉 UX Design<br>
+									<ul>
+										<li>Création et déclinaison de maquettes graphiques pour sites internet</li>
+										<li>Design de sites web (e-commerce, vitrine, etc.)</li>
+										<li>Design d'applications mobiles</li>
+										<li>Conception de zoning et wireframes</li>
+										<li>Élaboration de user flows</li>
+										<li>Rédaction de spécifications fonctionnelles</li>
+										<li>Analyse et optimisation de l'expérience utilisateur existante</li>
+										<li>Conduite d’ateliers de co-création et de design thinking</li>
+									</ul>
+									<br>
+									👉 UI Design<br>
+									<ul>
+										<li>Propositions de concepts créatifs et graphiques pour des appels d'offres</li>
+										<li>Interaction design, y compris l'animation de maquettes ou d'éléments d'interface</li>
+										<li>Refonte d'identité visuelle (logos, chartes graphiques)</li>
+										<li>Création de systèmes de design (design systèmes) cohérents et modulaires</li>
+										<li>Intégration de principes d'accessibilité dans le design d'interface</li>
+									</ul>
+									<br>
+									👉 Spécifications fonctionnelles et documents de marketing & communication <br>
+									<ul>
+										<li>Rédaction de spécifications fonctionnelles pour le développement des interfaces</li>
+										<li>Conception de supports de communication visuelle (présentations, brochures, etc.)</li>
+										<li>Création de contenus visuels pour les campagnes marketing (bannières, posts sur les réseaux sociaux, etc.)</li>
+									</ul>
+									<br><br>
+									Je suis à l'écoute de vos besoins et prête à vous conseiller pour mener à bien votre projet. 💪🏻👩🏻‍💻
+									<br>
+									N'hésitez pas à me contacter pour toute information complémentaire.
+									<br>
+									Au plaisir de collaborer avec vous ! 🙏🏻🌺</p>
 							</div>
 						</div>
-
-						<!-- Exprtience  -->
-						<div class="row animate-box row-bottom-padded-sm">
-							<div class="col-md-3">
-								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 2</span> Expérience</h3>
-							</div>
-							<div class="col-md-9">
-								
-								<p class="fh5co-lead">Je suis UX/UI Designer | Chef de projet multimédia.</p>
-								<p>J'ai fait un stage pratique de 3 mois à la fin de ma formation en bac+3 chez Adico à Bauvais 
-									et j'ai eu le rôle de développeuse Full-Stack et j'ai travaillé sur le projet DSN. Après avoir fini ma formation, 
-									j'ai travaillé en freelance pendant quelque mois et j'ai créé deux sites internets pour mes clients et 
-									puis j'ai rejoint Beorn Technologies comme intégrateuse web designer avec un contrat de CDD pour une période de 
-									3 mois et ensuite j'ai signé mon contrat d'alternance avec Beorn technologies pour suivre mes études en alternance 
-									en première année de master de parcours chef de projet multimédia. </p>
-							</div>
-						</div>	
-						
 
 						<div class="row animate-box row-bottom-padded-sm">
 							<div class="col-md-3">
@@ -139,15 +154,6 @@
 							</div>
 						</div>
 
-						<!-- <div class="row animate-box">
-							<div class="col-md-3">
-								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 4</span> Formation</h3>
-							</div>
-							<div class="col-md-12">
-								<div id="fh5co-map"></div>
-							</div>
-						</div> -->
-
 					</div>
 				</div>
 			</div>
@@ -157,7 +163,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small><br> crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
+						<p><small><br> Crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="#"><i class="icon-twitter"></i></a>
