--- a/portfolio/annem.html
+++ b/portfolio/annem.html
@@ -85,11 +85,11 @@
                         <div class="row row-bottom-padded-sm animate-box">
                             <div class="col-md-3">
                                 <h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> À
-                                    PROPOS DU PROJET</h3>
+                                    À PROPOS DU PROJET</h3>
                             </div>
                             <div class="col-md-9">
-                                <p class="fh5co-lead">ANNEMASSE-LES VOIRONS-AGGLOMERATION, communauté d'agglomérations, immatriculée sous le SIREN 200011773, est en activité depuis 14 ans. Établie à ANNEMASSE (74100), elle est spécialisée dans le secteur d'activité de l'administration publique générale. Son effectif est compris entre 250 et 499 salariés</p>
-                                <p>J'ai conçu une maquette pour site internet d'Annemasse Agglo suite à un appel d'offre. </p>
+                                <p class="fh5co-lead">Dans le cadre d'un appel d'offres, j'ai conçu une maquette pour le site internet d'Annemasse Agglo.</p>
+                                <p>ANNEMASSE-LES VOIRONS-AGGLOMÉRATION est une communauté d'agglomération en Haute-Savoie qui coordonne les services et projets communs pour plusieurs communes. </p>
                             </div>
                         </div>
 
