--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -85,12 +85,11 @@
                         <div class="row row-bottom-padded-sm animate-box">
                             <div class="col-md-3">
                                 <h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> À
-                                    PROPOS DU PROJET</h3>
+                                    À PROPOS DU PROJET</h3>
                             </div>
                             <div class="col-md-9">
-                                <p class="fh5co-lead">Conception maquette et parcours UX/UI d'un site web et un site
-                                    d'intranet.</p>
-                                <p>La maquette de Healthcare contient la page d'accueil de site internet de l'hôpital et aussi les pages de l'interface utilisateurs d'intranet de l'hôpital pour les professionnels de santé.</p>
+                                <p class="fh5co-lead">Conception de la maquette et des parcours UX/UI pour un site web et un intranet.</p>
+                                <p>La maquette Healthcare inclut la page d'accueil du site web de l'hôpital ainsi que les interfaces utilisateur de l'intranet réservées aux professionnels de santé.</p>
                             </div>
                         </div>
 
