--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -95,6 +95,72 @@
         data-colorbg=""
         data-next="yes"
       >
+        <!-- OceanEdiFy -->
+
+        <div class="container">
+          <div class="fh5co-project-inner row">
+            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
+              <div class="img-holder-1 animate-box">
+                <img src="images/OceanEdiFy/Desktop.png" alt="OceanEdiFy" />
+              </div>
+            </div>
+            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
+              <h2>OceanEdiFy</h2>
+              <p>OceanEdify est une plateforme éducative en ligne.</p>
+              <p>
+                <a
+                  href="OceanEdiFy.html"
+                  class="btn btn-light btn-outline transition"
+                  >Voir le projet</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- OceanEdiFy -->
+
+      <!-- Micro.hs -->
+      <div
+        class="fh5co-project js-fh5co-waypoint"
+        data-colorbg=""
+        data-next="yes"
+      >
+        <div class="container">
+          <div class="fh5co-project-inner row">
+            <div class="fh5co-imgs col-md-8 animate-box">
+              <div class="img-holder-1 animate-box">
+                <img src="images/MicrohsAccueil.png" alt="Micro-hs" />
+              </div>
+              <!-- <div class="img-holder-2 animate-box">
+							  <img src="#" alt="Extramuutto">
+			        </div> -->
+            </div>
+            <div class="fh5co-text col-md-4 animate-box">
+              <h2>Le site de Micro.hs</h2>
+              <p>
+                Micro-hs.fr est un site web qui propose des services et des
+                produits spécifiques liés à l'informatique,
+              </p>
+              <p>
+                <a
+                  href="microhs.html"
+                  class="btn btn-light btn-outline transition"
+                  >Voir le projet</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Micro.hs -->
+
+      <!-- Healthcare -->
+      <div
+        class="fh5co-project js-fh5co-waypoint"
+        data-colorbg=""
+        data-next="yes"
+      >
         <div class="container">
           <div class="fh5co-project-inner row">
             <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
@@ -108,7 +174,8 @@
             <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
               <h2>Healthcare</h2>
               <p>
-                Healthcare est un thème conçu pour un établissement de santé.
+                Exemple de maquette pour un intranet destiné à un établissement
+                de santé.
               </p>
               <p>
                 <a
@@ -121,91 +188,9 @@
           </div>
         </div>
       </div>
+      <!-- Healthcare -->
 
-      <!-- <div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="" data-next="yes">
-			<div class="container">
-				<div class="fh5co-project-inner row">
-					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
-						<div class="img-holder-1 animate-box">
-							<img src="images/home_beorn.svg" alt="Beorn">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/Mobilbeorn (1).png" alt="Beorn Technologies" style="max-width: 100%;">
-						</div>
-					</div>
-					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-						<h2>Beorn Technologies</h2>
-						<p>Beorn aide à la transformation numérique les entreprises. Elle donne des conseiles aux entreprises à la recherche de solutions digitales sur mesure. </p>
-						<p><a href="beorn.html" class="btn btn-light btn-outline transition">Voir le projet</a></p>
-					</div>
-				</div>
-
-			</div>
-		</div> -->
-
-      <!-- <div
-        class="fh5co-project js-fh5co-waypoint"
-        data-colorbg=""
-        data-next="yes"
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/annemasse.PNG" alt="annemasse" />
-              </div>
-              <div class="img-holder-2 animate-box">
-                <img src="images/mobil.png" alt="annemasse" />
-              </div>
-            </div>
-            <div class="fh5co-text col-md-4 animate-box">
-              <h2>Annemasse Agglo Intranet</h2>
-              <p>
-                ANNEMASSE-LES VOIRONS-AGGLOMERATION, elle est spécialisée dans
-                le secteur d'activité de l'administration publique générale. Son
-                effectif est compris entre 250 et 499 salariés.
-              </p>
-              <p>
-                <a
-                  href="annemasse.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-      <div
-        class="fh5co-project js-fh5co-waypoint fh5co-reverse"
-        data-colorbg=""
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/boulangerie2.PNG" alt="boulangerie" />
-              </div>
-              <!-- <div class="img-holder-2 animate-box">
-							<img src="images/" alt="">
-						</div> -->
-            </div>
-            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-              <h2>Boulangerie</h2>
-              <p>Le site vitrine pour une boulangerie.</p>
-              <p>
-                <a
-                  href="boulangerie.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+      <!-- Site internet d'Annemasse Agglo -->
       <div
         class="fh5co-project js-fh5co-waypoint"
         data-colorbg=""
@@ -222,8 +207,10 @@
 						</div> -->
             </div>
             <div class="fh5co-text col-md-4 animate-box">
-              <h2>Annemasse Agglo Site internet</h2>
-              <p>La deuxième maquette pour Annemasse Agglo.</p>
+              <h2>Site internet d'Annemasse Agglo</h2>
+              <p>
+                Refonte du design et de l'interface du site d'Annemasse Agglo.
+              </p>
               <p>
                 <a
                   href="annem.html"
@@ -235,7 +222,40 @@
           </div>
         </div>
       </div>
+      <!-- Site internet d'Annemasse Agglo -->
 
+      <!-- Boulangerie -->
+      <div
+        class="fh5co-project js-fh5co-waypoint fh5co-reverse"
+        data-colorbg=""
+      >
+        <div class="container">
+          <div class="fh5co-project-inner row">
+            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
+              <div class="img-holder-1 animate-box">
+                <img src="images/boulangerie2.PNG" alt="boulangerie" />
+              </div>
+              <!-- <div class="img-holder-2 animate-box">
+            <img src="images/" alt="">
+          </div> -->
+            </div>
+            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
+              <h2>Boulangerie</h2>
+              <p>Exemple d'un site vitrine d'une boulangerie.</p>
+              <p>
+                <a
+                  href="boulangerie.html"
+                  class="btn btn-light btn-outline transition"
+                  >Voir le projet</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Boulangerie -->
+
+      <!-- Intranet de Beorn Technologies -->
       <div
         class="fh5co-project js-fh5co-waypoint fh5co-reverse"
         data-colorbg=""
@@ -251,11 +271,11 @@
 						</div> -->
             </div>
             <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-              <h2>Intranet Beorn</h2>
+              <h2>Le site intranet de Beorn Technologies</h2>
               <p>
-                Beorn aide à la transformation numérique les entreprises. Elle
-                donne des conseiles aux entreprises à la recherche de solutions
-                digitales sur mesure.
+                Beorn aide les entreprises dans leur transformation numérique.
+                Elle leur fournit des conseils sur des solutions digitales sur
+                mesure.
               </p>
               <p>
                 <a
@@ -268,115 +288,7 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="fh5co-project js-fh5co-waypoint" data-colorbg="" data-next="yes">
-			<div class="container">
-				<div class="fh5co-project-inner row">
-					<div class="fh5co-imgs col-md-8 animate-box">
-						<div class="img-holder-1 animate-box">
-							<img src="images/Extramuutto.PNG" alt="Extramuutto">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/extramuutto-mobil.png" alt="Extramuutto">
-						</div>
-					</div>
-					<div class="fh5co-text col-md-4 animate-box">
-						<h2>Extramuutto</h2>
-						<p>Extramuutto est une entreprise de transport et de déménagement basée en Finlande.</p>
-						<p><a href="extramuutto.html" class="btn btn-light btn-outline transition">Voir le projet</a></p>
-					</div>
-				</div>
-
-			</div>
-		</div> -->
-
-      <div
-        class="fh5co-project js-fh5co-waypoint"
-        data-colorbg=""
-        data-next="yes"
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/jaune-ess.png" alt="Extramuutto" />
-              </div>
-              <!-- <div class="img-holder-2 animate-box">
-							<img src="#" alt="Extramuutto">
-						</div> -->
-            </div>
-            <div class="fh5co-text col-md-4 animate-box">
-              <h2>Site internet Beorn Technologies</h2>
-              <p>
-                Beorn aide à la transformation numérique les entreprises. Elle
-                donne des conseiles aux entreprises à la recherche de solutions
-                digitales sur mesure.
-              </p>
-              <p>
-                <a
-                  href="jaune.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Krossin muutto -->
-      <!-- <div class="fh5co-project js-fh5co-waypoint" data-bgcolor="" data-next="yes">
-			<div class="container">
-				<div class="fh5co-project-inner row">
-					<div class="fh5co-imgs col-md-8 animate-box">
-						
-						<div class="img-holder-1 col-md-push-4 animate-box">
-							<img src="images/Krossin.PNG" alt="Krossin-muutto">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/krossin-mobile-1.png" alt="Krossin-muutto">
-						</div>
-						
-					</div>
-					<div class="fh5co-text col-md-4 animate-box">
-						<h2>krossinmuutt</h2>
-						<p>Krossinmutto est une entreprise de transport et de déménagement basée en Finlande. </p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">Voir le projet</a></p>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
-      <!-- boutique de vêtements -->
-      <!-- <div
-        class="fh5co-project js-fh5co-waypoint fh5co-reverse"
-        data-colorbg=""
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/style.PNG" alt="vêtements" />
-              </div>
-              <div class="img-holder-2 animate-box">
-                <img src="images/style1.PNG" alt="vêtements" />
-              </div>
-            </div>
-            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-              <h2>Boutique vêtements</h2>
-              <p>La maquette d'une boutique de vêtements.</p>
-              <p>
-                <a
-                  href="butique.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!-- boutique de vêtements -->
+      <!-- Intranet de Beorn Technologies -->
 
       <!-- Lessivit -->
       <div
@@ -391,7 +303,7 @@
                 <img
                   src="images/Lessivit/Frame (1).png"
                   alt="Lessivit"
-                  style="max-width: 70%"
+                  style="max-width: 50%"
                 />
               </div>
               <!-- <div class="img-holder-2 animate-box">
@@ -429,7 +341,7 @@
                 <img
                   src="images/Where to Work YnovFrame.png"
                   alt="Where to work"
-                  style="max-width: 75%"
+                  style="max-width: 50%"
                 />
               </div>
             </div>
@@ -450,69 +362,6 @@
       </div>
       <!-- Where to work -->
 
-      <!-- Micro.hs -->
-      <div
-        class="fh5co-project js-fh5co-waypoint"
-        data-colorbg=""
-        data-next="yes"
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/MicrohsAccueil.png" alt="Micro-hs" />
-              </div>
-              <!-- <div class="img-holder-2 animate-box">
-							<img src="#" alt="Extramuutto">
-			</div> -->
-            </div>
-            <div class="fh5co-text col-md-4 animate-box">
-              <h2>Le site de Micro.hs</h2>
-              <p>
-                Micro-hs.fr est un site web qui propose des services et des
-                produits spécifiques liés à l'informatique,
-              </p>
-              <p>
-                <a
-                  href="microhs.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Lessivit -->
-
-      <!-- OceanEdiFy -->
-      <div
-        class="fh5co-project js-fh5co-waypoint fh5co-reverse"
-        data-colorbg=""
-      >
-        <div class="container">
-          <div class="fh5co-project-inner row">
-            <div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
-              <div class="img-holder-1 animate-box">
-                <img src="images/OceanEdiFy/Desktop.png" alt="OceanEdiFy" />
-              </div>
-            </div>
-            <div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-              <h2>OceanEdiFy</h2>
-              <p>OceanEdify est une plateforme éducative en ligne.</p>
-              <p>
-                <a
-                  href="OceanEdiFy.html"
-                  class="btn btn-light btn-outline transition"
-                  >Voir le projet</a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- OceanEdiFy -->
-
       <footer id="fh5co-footer" class="js-fh5co-waypoint">
         <div class="container">
           <div class="row">
@@ -520,7 +369,7 @@
               <p>
                 <small
                   ><br />
-                  crée par
+                  Créé par
                   <a href="https://sana-hm.github.io/" target="_blank"
                     >Sana HOMAEI</a
                   >
