--- a/portfolio/intranet.html
+++ b/portfolio/intranet.html
@@ -85,10 +85,10 @@
                         <div class="row row-bottom-padded-sm animate-box">
                             <div class="col-md-3">
                                 <h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> À
-                                    PROPOS DU PROJET</h3>
+                                    À PROPOS DU PROJET</h3>
                             </div>
                             <div class="col-md-9">
-                                <p class="fh5co-lead">J'ai conçu l'interface d'intranet de Beorn technologies pour la gestion de ses projets.</p>
+                                <p class="fh5co-lead">J'ai réalisé cette maquette et ces pages pour optimiser la gestion des projets au sein de l'entreprise Beorn Technologies.</p>
                                
                             </div>
                         </div>
@@ -136,10 +136,7 @@
                                             <img
                                                     src="images/intranet3.PNG" alt="">
                                         </li>
-                                        <li>
-                                            <img
-                                                    src="images/intranet4.PNG" alt="">
-                                        </li>
+                                
                                         <li>
                                             <img
                                                     src="images/intranet5.PNG" alt="">
