--- a/portfolio/boulangerie.html
+++ b/portfolio/boulangerie.html
@@ -85,10 +85,10 @@
                         <div class="row row-bottom-padded-sm animate-box">
                             <div class="col-md-3">
                                 <h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> À
-                                    PROPOS DU PROJET</h3>
+                                    À PROPOS DU PROJET</h3>
                             </div>
                             <div class="col-md-9">
-                                <p class="fh5co-lead">J'ai conçu cette maquette pour une boulangerie.</p>
+                                <p class="fh5co-lead">Exemple de la page d'accueil UI pour un site de boulangerie.</p>
                             </div>
                         </div>
 
