--- a/portfolio/butique.html
+++ b/portfolio/butique.html
@@ -85,7 +85,7 @@
                         <div class="row row-bottom-padded-sm animate-box">
                             <div class="col-md-3">
                                 <h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> À
-                                    PROPOS DU PROJET</h3>
+                                    À PROPOS DU PROJET</h3>
                             </div>
                             <div class="col-md-9">
                                 <p class="fh5co-lead">J'ai conçu cette maquette pour une boutique de vêtements en utilisant Figma.</p>
