--- a/index.html
+++ b/index.html
@@ -104,13 +104,12 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>Étudiante en UX/UI Design en deuxième année de Master à Ynov Campus Toulouse.<br> À l'approche de la fin de mes études, je suis à la recherche d'une opportunité professionnelle.</h3>
+                    <h3>Diplômée d'un Master en direction artistique spécialisé en UX/UI design de Ynov Campus Toulouse, avec 3 ans d'expérience dans le domaine.</h3>
                     <p>
-                      Salut! Je m'appelle Sana.<br>
-                      J'ai acquis une solide expertise en design d'interface et en expérience utilisateur. Ayant travaillé en tant que UX/UI Designer au cours des deux dernières années, je suis à la recherche d'une nouvelle opportunité professionnelle qui me permettra de mettre à profit mes compétences dans un environnement dynamique. <br>
-                      
-                      
-                    </p>
+                      Bonjour! Je m'appelle Sana.<br>
+                      En tant qu'UX/UI Designer et Chef de projet multimédia, j'ai acquis une solide expertise en design d'interface et en expérience utilisateur. Je suis actuellement à 
+                      la recherche d'une nouvelle opportunité professionnelle, ouverte à des postes en <b>CDI</b> ou à <b>des missions freelance</b>. Je souhaite mettre à profit mes compétences dans un environnement dynamique et stimulant, où je pourrai contribuer de manière significative au succès des projets.
+                     <br></p>
                 </div>
                 <div class="row">
                   <div class="personal-info padd-15">
@@ -140,7 +139,7 @@
                     <!--Telecharge CV-->
                    <div class="row mt-5"> 
                       <div class="col-12 padd-15 pb-5">
-                     <a href="Sana-cv.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
+                     <a href="Sana HOMAEI-CV-UXUI Designer.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
                       </div>
                     </div> 
                 <!--End about section-->
