--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -136,6 +136,9 @@
 								<ul class="fh5co-social fh5co-stack">
 									<li>
 										<a href="mailto: sana.homaei1@gmail.com" target="_blank"><i class="icon-mail2"></i> Envoyer un e-mail</a>
+									</li> 
+									<li>
+										<a href="https://www.malt.fr/profile/sanahomaei" target="_blank"><i class="icon-desktop"></i> Profil sur Malt</a>
 									</li>
 									<li>
 										<a href="https://github.com/Sana-hm" target="_blank"><i class="icon-github"></i> GitHub</a>
